--- a/src/components/Feed/feed.scss
+++ b/src/components/Feed/feed.scss
@@ -1,1 +1,25 @@
 //test file
+
+.tiny {
+  padding: 10px;
+  display: flex;
+  font-size: 1rem;
+
+  justify-content: space-between;
+  align-items: center;
+
+  img {
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    width: 50px;
+  }
+
+  .name {
+    font-size: 1rem !important;
+  }
+
+  .email {
+    color: rgb(116, 116, 116);
+  }
+}
