--- a/src/components/Feed/feed.scss
+++ b/src/components/Feed/feed.scss
@@ -5,8 +5,8 @@
   display: flex;
   font-size: 1rem;
 
-  justify-content: space-between;
-  align-items: center;
+  // justify-content: space-between;
+  // align-items: center;
 
   img {
     -webkit-border-radius: 100px;
@@ -17,9 +17,18 @@
 
   .name {
     font-size: 1rem !important;
+    
   }
 
   .email {
     color: rgb(116, 116, 116);
   }
+
+  .userInfo {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 }
+
