--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -36,7 +36,7 @@
 
     .item:hover {
       color: rgb(0, 29, 12);
-      background-color: yellow;
+      background-color: rgb(122, 157, 255);
     }
   }
 }
