--- a/src/components/ProfileCard/profilecard.scss
+++ b/src/components/ProfileCard/profilecard.scss
@@ -27,6 +27,7 @@
 
 @media only screen and (max-width: 600px) {
   .profilecard {
+    border: 1px solid black;
     display: flex;
     word-wrap: break-word;
     margin: 10px;
