fixed some css bugs

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -26,7 +26,7 @@
     .item {
       padding: 10px;
       text-decoration: none;
-      color: yellow;
+      color: rgb(245, 242, 216);
       transition: 0.3s;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
@@ -35,8 +35,8 @@
     }
 
     .item:hover {
-      color: rgb(0, 29, 12);
-      background-color: rgb(122, 157, 255);
+      color: inherit;
+      background-color: rgb(245, 242, 216);
     }
   }
 }
