--- a/src/components/Feed/feed.scss
+++ b/src/components/Feed/feed.scss
@@ -4,7 +4,7 @@
   padding: 10px;
   display: flex;
   font-size: 1rem;
-  border: 1px solid black;
+  background-color: rgb(245, 242, 216);
   justify-content: space-evenly;
   align-items: center;
 
@@ -12,7 +12,7 @@
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px;
-    width: 10%;
+    width: 15%;
   }
 
   .name {
@@ -25,7 +25,9 @@
 
   .userInfo {
     display: flex;
-
-    border: 1px solid pink;
+    flex-wrap: wrap;
+    
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
